events logic for disabling all

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1568,6 +1568,12 @@ button.-solid {
   font-weight: 300;
 }
 
+.repo-settings .category .sub-description {
+  font-size: 14px;
+  font-weight: 300;
+  font-style: italic;
+}
+
 .inputs {
   margin: 1em;
 }
