cleanup, moving code to Settings.elm

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1568,9 +1568,7 @@ button.-solid {
   font-weight: 300;
 }
 
-.repo-settings .category .sub-description {
-  font-size: 14px;
-  font-weight: 300;
+.repo-settings .category .description.-italic {
   font-style: italic;
 }
 
