--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -779,6 +779,7 @@ button.-solid {
 .theme-light .build .info {
   background: var(--color-white);
   border: 1px solid var(--color-bg-dark);
+  border-left: none;
 }
 
 .build .row {
@@ -1395,11 +1396,10 @@ button.-solid {
 
 .hook-status.-success {
   stroke: var(--color-green);
-  color: var(--color-green);
 }
 
 .hook-status.-failure {
-  color: var(--color-red);
+  stroke: var(--color-red);
 }
 
 .hooks .row .cell {
