--- a/src/scss/_themes.scss
+++ b/src/scss/_themes.scss
@@ -42,5 +42,5 @@ body.theme-light {
   --color-secondary: var(--color-cyan);
   --color-secondary-light: var(--color-cyan-light);
 
-  --color-focus: var(--color-slate);
+  --color-focus: var(--color-bg-dark);
 }
