--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -478,7 +478,7 @@ button,
   }
 }
 
-.repo-activate {
+.repo-enable {
   display: flex;
   align-items: center;
 
@@ -497,36 +497,36 @@ button,
   flex-direction: row;
 }
 
-.repo-activate-btn {
+.repo-enable-btn {
   margin-right: 0.5em;
 }
 
-.repo-activate--added {
+.repo-enable--added {
   color: var(--color-green);
   border: var(--line-width) solid var(--color-green);
 
-  @extend .repo-activate;
+  @extend .repo-enable;
 }
 
-.repo-activate--adding {
+.repo-enable--adding {
   color: var(--color-yellow);
   border: var(--line-width) solid var(--color-yellow);
 
-  @extend .repo-activate;
+  @extend .repo-enable;
 }
 
-.repo-activate--adding-text {
+.repo-enable--adding-text {
   margin-left: 12px;
 }
 
-.repo-activate--failed {
+.repo-enable--failed {
   cursor: pointer;
 
   color: var(--color-red);
   border: var(--line-width) solid var(--color-red);
   background: none;
 
-  @extend .repo-activate;
+  @extend .repo-enable;
 
   &:hover svg {
     transition: transform 0.2s ease-in-out;
@@ -1761,48 +1761,48 @@ button.-solid {
   justify-content: space-between;
 }
 
-.activation-container {
+.enable-container {
   margin-top: 1em;
   display: flex;
   flex-direction: row;
   list-style: none;
 }
 
-.activation-btn-label-a {
+.enable-btn-label-a {
   font-weight: 300;
   font-size: 18px;
 }
 
-.activation-btn-label-b {
+.enable-btn-label-b {
   font-weight: 300;
   font-size: 14px;
 }
 
-.activation-column-a {
+.enable-column-a {
   display: flex;
   margin-right: 0.8em;
   flex-direction: column;
 }
-.activation-column-b {
+.enable-column-b {
   display: flex;
   flex-direction: row;
 }
 
-.repo-deactivate {
+.repo-disable {
   min-width: 170px;
 }
 
-.repo-deactivate-deactivating {
+.repo-disable-deactivating {
   color: var(--color-yellow);
   border: var(--line-width) solid var(--color-yellow);
   min-width: 170px;
 }
 
-.repo-deactivate-deactivating-text {
+.repo-disable-deactivating-text {
   margin-left: 12px;
 }
 
-button.-btn.-inverted.repo-deactivate-confirm {
+button.-btn.-inverted.repo-disable-confirm {
   color: var(--color-red-light);
   border: var(--line-width) solid var(--color-red-light);
   &:hover {
